--- a/Baeume_Gr1/.project
+++ b/Baeume_Gr1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Listen_Gr1</name>
+	<name>Baeume_Gr1</name>
 	<comment></comment>
 	<projects>
 	</projects>
